--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ color: #2e2f42;
 ul {
     list-style: none;
     margin: 0;
-    padding-left: 0;
+    padding: 0;
 }
 
 a {
@@ -80,7 +80,26 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 display: block;
 padding: 24px 0;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.menu {
+    position: relative;
+    color: #404bbf;
+}
+
+.menu::after {
+content: "";
+position: absolute;
+left: 0;
+bottom: -1px;
+width: 100%;
+height: 4px;
+border-radius: 2px;
+display: inline-block;
+background-color: #404bbf;
+}
+
 
 .header-menu-link:hover,
 .header-menu-link:focus {
@@ -105,6 +124,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-contacts-item:hover,
@@ -118,8 +138,23 @@ color: #434455;
 background: #2e2f42;
 padding-top: 188px;
 padding-bottom: 188px;
+max-width: 1440рх;
+margin: 0 auto;
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7), 
+    rgba(46, 47, 66, 0.7)),
+ url(../images/people-office.jpg);
+
 }
 
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .hero-title {
     font-weight: 700;
     font-size: 56px;
@@ -149,6 +184,8 @@ padding-bottom: 188px;
     display: block;
     margin: 0 auto;
     min-width: 169px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -195,6 +232,22 @@ color: #2e2f42;
 margin-bottom: 8px;
 }
 
+.advantage-icon {
+   
+}
+
+.advantage-box {
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background-color: #f4f4fd;
+   padding: 24px 100px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
 .advantage-item-text {
 font-size: 16px;
 line-height: 1.5;
@@ -227,13 +280,17 @@ margin-bottom: 72px;
 
 .team-item {
     background-color: #FFFFFF;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    
 }
 .team-list .team-item {
     width: calc((100% - 24px * 3) / 4);
     border-radius: 0 0 4px 4px;
+
 }
+
 .name-box {
-    padding: 32px 0 32px;
+padding: 32px 0;
 }
 
 .team-item-picture {
@@ -246,7 +303,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-margin-bottom: 8px;
+
 }
 
 .team-item-text {
@@ -255,6 +312,36 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
+}
+.team-list-icon {
+display: flex;
+gap: 24px;
+justify-content: center;
+
+}
+.team-item-icon {
+  width: 40px;  
+  height: 40px;
+}
+.team-list-link {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+background-color: #4d5ae5;
+display: flex;
+justify-content: center;
+align-items: center;
+transform: background-color;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+fill: #f4f4fd;
+}
+.team-icon {  
+    
+}
+
+.team-list-link:hover,
+.team-list-link:focus {
+    background-color: #31d0aa;
 }
 
 /** ==========PORTFOLIO============ */
@@ -285,6 +372,9 @@ margin-bottom: 72px;
 
 }
 
+.portfolio-item:hover .portfolio-cover-picture {
+transform: translateY(0);
+}
 .portfolio-box {
     padding: 32px 16px;
     border: 1px solid #E7E9FC;
@@ -293,6 +383,23 @@ margin-bottom: 72px;
 }
 .portfolio-item-picture {
    
+}
+.portfolio-picture-box {
+    position: relative;
+    overflow: hidden; 
+}
+
+.portfolio-cover-picture {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px 164px 32px;
+    background-color: #4d5ae5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item-title {
@@ -327,16 +434,59 @@ color: #434455;
     text-transform: uppercase;
     display: inline-block;
     margin-bottom: 16px;
-    margin-right: 76px;
 }
+
 .footer-logo-part {
     color: #f4f4fd;
 }
-.footer-text{
+
+.footer-container{
+  display: flex; 
+  align-items: baseline; 
+
+}
+.footer-text-box {
+margin-right: 120px;
+}
+.footer-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
     
+}
+
+.footer-contact {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
+}
+
+.footer-list-icon {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-list-link {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+background-color: #4d5ae5;
+display: flex;
+justify-content: center;
+align-items: center;
+transform: background-color;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon {
+    fill: #fff;
+}
+.footer-list-link:hover,
+.footer-list-link:focus {
+    background-color: #31d0aa;
 }
