--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,9 @@ color: #2e2f42;
 display: block;
 padding: 24px 0;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
 
 .menu {
     position: relative;
@@ -104,6 +106,7 @@ background-color: #404bbf;
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404bbf;
+
 }
 
 
@@ -139,6 +142,7 @@ background: #2e2f42;
 padding-top: 188px;
 padding-bottom: 188px;
 margin: 0 auto;
+max-width: 1440px;
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -183,7 +187,7 @@ background-image: linear-gradient(
     display: block;
     margin: 0 auto;
     min-width: 169px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 .hero-button:hover,
@@ -245,6 +249,7 @@ margin-bottom: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
+   margin-bottom: 8px;
 }
 
 .advantage-item-text {
@@ -331,7 +336,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 transform: background-color;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 fill: #f4f4fd;
 }
 .team-icon {  
@@ -340,7 +345,7 @@ fill: #f4f4fd;
 
 .team-list-link:hover,
 .team-list-link:focus {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 /** ==========PORTFOLIO============ */
@@ -368,11 +373,12 @@ margin-bottom: 72px;
 }
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .portfolio-cover-picture {
 transform: translateY(0);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-box {
     padding: 32px 16px;
@@ -395,7 +401,7 @@ transform: translateY(0);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    padding: 40px 32px 164px 32px;
+    padding: 40px 32px;
     background-color: #4d5ae5;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -461,7 +467,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #fff;
+color: #f4f4fd;
 margin-bottom: 16px;
 }
 
@@ -479,11 +485,12 @@ display: flex;
 justify-content: center;
 align-items: center;
 transform: background-color;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+fill: #f4f4fd;
 }
 
 .footer-icon {
-    fill: #fff;
+    
 }
 .footer-list-link:hover,
 .footer-list-link:focus {
